# Narrator_Sound

./: .gitignore  README.md  app.py  install_dependencies.ps1  pyproject.toml
src/: __init__.py  audio_processor.py  text_processor.py  tts_engine.py  voice_cloner.py
tests/: __init__.py  test_audio_processor.py  test_text_processor.py
